Fresh Austrian Work

--- a/localisation/english/replace/replaced_from_countries_l_english.yml
+++ b/localisation/english/replace/replaced_from_countries_l_english.yml
@@ -90,17 +90,19 @@
  CAN_communism:0 "Province of Canada"
  CAN_communism_DEF:0 "the Province of Canada"
 
- HUN_fascism:0 "Republic of Hungary"
- HUN_fascism_DEF:0 "the Republic of Hungary"
- HUN_democratic:0 "Republic of Hungary"
- HUN_democratic_DEF:0 "the Republic of Hungary"
- HUN_neutrality:0 "Kingdom of Hungary"
- HUN_neutrality_DEF:1 "the Kingdom of Hungary"
- HUN_communism:0 "Hungarian People's Republic"
- HUN_communism_DEF:0 "the Hungarian People's Republic"
- HUN:0 "Hungary"
- HUN_DEF:0 "Hungary"
- HUN_ADJ:0 "Hungarian"
+ HUN_fascism: "Republic of Hungary"
+ HUN_fascism_DEF: "the Republic of Hungary"
+ HUN_democratic: "Republic of Hungary"
+ HUN_democratic_DEF: "the Republic of Hungary"
+ HUN_neutrality: "Kingdom of Hungary"
+ HUN_neutrality_DEF: "the Kingdom of Hungary"
+ HUN_communism: "Hungarian People's Republic"
+ HUN_communism_DEF: "the Hungarian People's Republic"
+ HUN_AUS: "Kingdom of Hungary"
+ HUN_AUS_DEF: "the Kingdom of Hungary"
+ HUN: "Hungary"
+ HUN_DEF: "Hungary"
+ HUN_ADJ: "Hungarian"
 
  KOR_fascism:0 "Independent Korean Republic"
  KOR_fascism_DEF:0 "the Independent Korean Republic"
