new spain starting situation and a few focus + events

--- a/localisation/english/1870_spain_l_english.yml
+++ b/localisation/english/1870_spain_l_english.yml
@@ -40,8 +40,41 @@
 
  # COSMETIC TAGS
 
- #
- 
- #
+ # TOOLTIPS
+ SPR_hellnah_historical_tt:0 "§OThis is the Historical Choice.§!"
+ SPR_hellnah_info_tt:0 "§YDue to the Refusal of Killing the Insurrectors, the Queen Isabel II Will not like this dicision, Leading to Leopoldo O'Donnell Removal and his Replacement with Narváez.§!"
+ SPR_hellyes_leads_to_spain_boom_boom_tt:0 "§RThis will lead to Spain falling into Chaos and Civil War.§!"
+ SPR_hellyes_leads_to_progressive_and_carlist_path_tt:0 "§YDespite Leopoldo Opposition to the killing, he still gives the Positive to the Killing of the Insurrectors, this will not be a good news for our People. Not Good for our Already Declining Government and Kingdom. \n \nThis Choice Leads to the Carlist and Progressive Paths.§!"
+ # EVENTS TITLES
+ spain_fpw.6.t:0 "Sublevación de Villarejo de Salvanés"
 
+ spain_fpw.7.t:0 "Sublevación del cuartel de San Gil"
+
+ spain_fpw.8.t:0 "Arrest of the Insurrectors, and the Queen's Request."
+
+ spain_fpw.9.t:0 "Isabel II Dismisses Leopoldo O'Donnell."
+
+ spain_fpw.10.t:0 "First Wave of Social Unrest"
+
+ # EVENTS DESCRIPTIONS
+ spain_fpw.6.desc:0 "W.I.P"
+
+ spain_fpw.7.desc:0 "W.I.P"
+
+ spain_fpw.8.desc:0 "W.I.P"
+
+ spain_fpw.9.desc:0 "W.I.P"
+
+ spain_fpw.10.desc:0 "W.I.P"
+ # EVENTS OPTIONS
+ spain_fpw.6.a:0 "Um.. Nah Thanks."
+
+ spain_fpw.7.a:0 "Again!?"
+
+ spain_fpw.8.a:0 "Refuse the Killing of Insurrectors"
+ spain_fpw.8.b:0 "Fine... I Wonder what will come next..."
+
+ spain_fpw.9.a:0 "Bye bye Leopoldo"
+
+ spain_fpw.10.a:0 "What..."
  #
