German Translation Part 2
- everything localised for Afghanistan except focus tree

- localised everything Austria has up until now

- translated the bookmarks (tommorow I will clean them up, because they still have the 1870 startdate and the descriptions are overlapping the GUI)

--- a/localisation/german/1870_achievements_l_german.yml
+++ b/localisation/german/1870_achievements_l_german.yml
@@ -1,4 +1,6 @@
 ﻿l_german:
+
+##### ACHIEVEMENTS
  1870_achievements:0 "1870"
  germany_formed_achievement_NAME:0 "Heil dir im Siegerkranz"
  germany_formed_achievement_DESC:0 "Gründe Deutschland."
