German Translation Part 2 - Hotfix
Fixed some gamebreaking bugs in the translation

--- a/localisation/german/1870_afghan_events_l_german.yml
+++ b/localisation/german/1870_afghan_events_l_german.yml
@@ -198,3 +198,41 @@ fpw_AFG_supporting_afghanistan_desc:0 "Wir haben beschlossen, einige Hilfe nach 
 fpw_AFG_extended_use_of_propoganda:0 "Erweiterter Einsatz von Propaganda"
 fpw_AFG_cheaper_guns:0 "Günstigere Gewehre"
 fpw_AFG_cheaper_guns_desc:0 "Günstigere Gewehre zur Massenproduktion sind jetzt eine Notwendigkeit"
+
+#### Custom Tooltips
+fpw_afg_investments:0 "§G Dieser Schwerpunkt wird Investitionsentscheidungen freischalten§!"
+fpw_afg_inv_dec:0 "Schaltet Entscheidung §Y Investitionsmöglichkeiten§! frei"
+fpw_afg_unlocks_mil_branch:0 "§GDieser Schwerpunkt wird den afghanischen Bürgerkriegs-Militärzweig freischalten§!"
+new_afghan_army:0 "§GDiese Idee wird mit jedem Schwerpunkt, den Sie im militärischen Zweig durchführen, verbessert.§!"
+afg_army_influence:0 "§GDieser Schwerpunkt wird die Stammeseinfluss-Mechanik starten! Wenn der Stammeseinfluss 10 oder -10 erreicht, wird ein Bürgerkrieg ausbrechen!§!"
+afg_modernize_infantry:0 "Schaltet Entscheidung §YInfanterieausrüstung modernisieren§! frei"
+afg_modernize_support:0 "Schaltet Entscheidung §YZusatzausrüstung modernisieren§! frei"
+afg_modernize_artillery:0 "Schaltet Entscheidung §YArtillerie modernisieren§! frei"
+afg_modernize_calvary_equipment:0 "Schaltet Entscheidung §YKavallerie modernisieren§! frei"
+afg_research_plan:0 "Jedes Jahr, in dem wir diese Idee haben, erhalten wir einen anderen Kavallerie-Bonus oder -Modifikator für die Kavallerie-Forschungsplan-Idee. (Stoppt im Jahr 1874)""
+fpw_afg_into_russia:0 "Diese Idee wird nach Ihrem Krieg mit Russland entfernt"
+fpw_afg_durrani:0 "§YAfganistan§! wird als §YDurrani Reich§! bekannt sein"
+fpw_afg_into_britain:0 "Diese Idee wird nach Ihrem Krieg mit Großbritannien entfernt"
+fpw_afg_islam_united:0 "§YAfganistan§! wird als §YAfghanisches Kalifat§! bekannt sein"
+decision_organize_bureaucracy:0 "Schaltet Entscheidung §YBürokratie umstrukturieren§! frei"
+justice_system:0 "Schaltet Entscheidung §YJustizsysteme errichten§! frei"
+common_people:0 "Schaltet Entscheidung §YLebensbedingungen verbessern§! frei"
+afg_economic_tooltip:0 "§GDieser Schwerpunkt wird Ihre wirtschaftliche Idee verbessern§!"
+fpw_AFG_central_asian_nationalism:0 "Zentralasiatischer Nationalismus"
+afg_recruit_tribes:0 "Die Stämme rekrutieren"
+afg_recruit_tribes_desc:0 ""
+
+##### DECISIONS
+fpw_afg_investment_chances_dec:0 "Investierungsmöglichkeiten"
+fpw_ask_prussia:0 "Frag die Preußen um Investitionen"
+fpw_ask_france:0 "Frag die Franzosen um Investitionen"
+fpw_ask_britain:0 "Frag die Briten um Investitionen"
+fpw_afg_army_modernization:0 "Armee Modernisierung"
+fpw_modernize_infantry_eq:0 "Infanterieausrüstung modernisieren"
+fpw_modernize_support_eq:0 "Zusatzausrüstung modernisieren"
+fpw_modernize_calvary:0 "Kavallerie modernisieren"
+fpw_modernize_artillery:0 "Artillerie modernisieren"
+fpw_sher_ali_khans_reforms:0 "Sher Ali Khans Reformen"
+fpw_promote_common_welfare:0 "Förderung des Gemeinwohls"
+fpw_establish_justice_systems:0 "Justizsysteme errichten"
+fpw_reorginize_the_bureaucracy:0 "Bürokratie umstrukturieren"
