--- a/localisation/english/1870_countries_cosmetic_l_english.yml
+++ b/localisation/english/1870_countries_cosmetic_l_english.yml
@@ -95,8 +95,8 @@
  AUS_austria_hungary_civil_fleet_ADJ:0 "Austrian"
 
  AUS_austrian_empire:0 "Empire of Austria"
- AUS_austria_empire_DEF:0 "the Austrian Empire"
- AUS_austria_empire_ADJ:0 "Austrian"
+ AUS_austrian_empire_DEF:0 "the Empire of Austria"
+ AUS_austrian_empire_ADJ:0 "Austrian"
 
  CHI_qing:0 "Great Qing"
  CHI_qing_DEF:0 "the Great Qing"
