--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -87,7 +87,8 @@
  STATE_85:0 "Danzig"
  STATE_86:0 "Posen"
  STATE_87:1 "Kalisz"
- STATE_88:1 "Krakau"
+ STATE_88: "Kraków"
+ AUS_STATE_88: "Krakau"
  STATE_89:0 "Stanislau"
  STATE_90:0 "Kielce"
  STATE_91:0 "Lwów"
