German translation Part 3
- complete localisation for Afghanistan except a few things

- complete bookmarks

--- a/localisation/german/1870_afghan_events_l_german.yml
+++ b/localisation/german/1870_afghan_events_l_german.yml
@@ -2,7 +2,7 @@
 
  ##### EVENTS
  afghan_fpw.1.t:0 "Afganischer Bürgerkrieg geht weiter!!!"
- afghan_fpw.1.d:0 "Der afganische Bürgerkrieg dauert immer noch an, es ist an der Zeit, dass wir Afghanistan zu einem Staat vereinen. Wir müssen diesen Bürgerkrieg für Afghanistan beenden!"
+ afghan_fpw.1.d:0 "Der afganische Bürgerkrieg dauert immer noch an, es ist an der Zeit, dass wir Afganistan zu einem Staat vereinen. Wir müssen diesen Bürgerkrieg für Afganistan beenden!"
 
  afghan_fpw.2.t:0 "Wie gehen wir den Bürgerkrieg an?"
  afghan_fpw.2.d:0 "Der afganische Bürgerkrieg dauert nun schon seit drei Jahren an. Die Menschen in unserem Land fordern einen sofortigen Sieg. Wenn wir das nicht tun, könnte es unvorhergesehene Konsequenzen geben, aber wenn wir abwarten wäre es für unsere Nation viel einfacher und kostengünstiger. Wenn Sie sich entscheiden, jetzt anzugreifen, während wir weniger Manpower und Truppen als der Feind haben, könnte dies scheitern, was nicht empfohlen wird. Wenn Sie zu lange warten, werden wir schwerwiegende Konsequenzen erleiden. Wähle bitte nun, wie wir mit dem Bürgerkrieg umgehen."
@@ -11,7 +11,7 @@
  afghan_fpw.3.d:0 "Wir haben den Bürgerkrieg endlich gewonnen. Wir können nun mit dem Wiederaufbau der Nation beginnen."
 
  afghan_fpw.4.t:0 "Afganistan ruft um Hilfe im Bürgerkrieg"
- afghan_fpw.4.d:0 "Wie du weißt, ist Afghanistan vor drei Jahren in einen Bürgerkrieg geraten. Sie bitten jetzt um Hilfe. Wir können ihre Anfrage ablehnen und warten, bis die andere Seite um Unterstützung bittet, oder wir können ihr Angebot jetzt annehmen. Letztendlich könnten wir auch beide ablehnen und Afghanistan allein lassen, aber das könnte zu einer britischen Intervention führen."
+ afghan_fpw.4.d:0 "Wie du weißt, ist Afganistan vor drei Jahren in einen Bürgerkrieg geraten. Sie bitten jetzt um Hilfe. Wir können ihre Anfrage ablehnen und warten, bis die andere Seite um Unterstützung bittet, oder wir können ihr Angebot jetzt annehmen. Letztendlich könnten wir auch beide ablehnen und Afganistan allein lassen, aber das könnte zu einer britischen Intervention führen."
  afghan_fpw.5.t:0 "Wir wurden abgelehnt"
  afghan_fpw.5.d:0 "Wir konnten keine Hilfe verhandeln."
 
@@ -27,7 +27,7 @@
  afghan_fpw.9.d:0 "Es war klar, dass die Briten ablehnen würden, aber zumindest haben wir es versucht. Wir brauchen ihre Hilfe nicht, um diesen Bürgerkrieg zu gewinnen."
 
  afghan_fpw.10.t:0 "Afganistan bittet darum Artillerie-Designs zu kopieren"
- afghan_fpw.10.d:0 "Die Afganen haben uns gebeten, ihre Artillerie-Designs zu kopieren, wir könnten diese Chance nutzen, um sicherzustellen, dass Afghanistan in Zukunft mit uns verbündet ist."
+ afghan_fpw.10.d:0 "Die Afganen haben uns gebeten, ihre Artillerie-Designs zu kopieren, wir könnten diese Chance nutzen, um sicherzustellen, dass Afganistan in Zukunft mit uns verbündet ist."
 
  afghan_fpw.11.t:0 "Preußen akzeptiert unseren Vorschlag"
  afghan_fpw.11.d:0 "Die Preußen haben zugestimmt, dass wir ihre Artillerie-Designs kopieren."
@@ -63,7 +63,7 @@
  afghan_fpw.26.t:0 "Russland kapituliert"
  afghan_fpw.26.d:0 "Russland hat Bukhara an uns abgetreten."
  afghan_fpw.27.t:0 "Wir haben Delhi verloren"
- afghan_fpw.27.d:0 "Delhi ist verloren und damit auch dieser Krieg, wir können unsere Verluste begrenzen und den Krieg hier beenden oder wir können Afghanistan zurückschlagen."
+ afghan_fpw.27.d:0 "Delhi ist verloren und damit auch dieser Krieg, wir können unsere Verluste begrenzen und den Krieg hier beenden oder wir können Afganistan zurückschlagen."
  afghan_fpw.28.t:0 "England will nicht kapitulieren"
  afghan_fpw.28.d:0 "Auch wenn wir Delhi erobert haben, weigert sich England, unsere beanspruchten Gebiete aufzugeben!"
  afghan_fpw.29.t:0 "England hat ihre Ansprüche aufgegeben"
@@ -89,8 +89,8 @@
  afghan_fpw.39.t:0 "Vertrag von Gandamak"
  afghan_fpw.39.d:0 "Afganistan möchte sich stärker an Russland ausrichten und hat beschlossen, uns zu kontaktieren, um einen Vertrag zu unterzeichnen."
  afghan_fpw.40.t:0 "Afganistan trennt die Verbindungen!"
- afghan_fpw.40.d:0 "Nachdem Afghanistan den russischen Einfluss erhöht hat, um den britischen Einfluss einzudämmen, haben sie die Verbindungen zu den Engländern vollständig gekappt."
- afghan_fpw.41.t:0 "Afganen bitten uns, dem zweiten anglo-afghanischen Krieg beizutreten"
+ afghan_fpw.40.d:0 "Nachdem Afganistan den russischen Einfluss erhöht hat, um den britischen Einfluss einzudämmen, haben sie die Verbindungen zu den Engländern vollständig gekappt."
+ afghan_fpw.41.t:0 "Afganistan bittet uns, dem zweiten anglo-afghanischen Krieg beizutreten"
  afghan_fpw.41.d:0 ""
  afghan_fpw.42.t:0 "Burma lehnt ab"
  afghan_fpw.42.d:0 ""
@@ -111,10 +111,10 @@ fpw_AFG_the_national_afghan_army_3:0 "Afganischer Fanatismus"
 fpw_AFG_the_national_afghan_army_2:0 "Afganischer Fanatismus"
 fpw_AFG_the_national_afghan_army:0 "Afganischer Fanatismus"
 fpw_AFG_mobilize_the_reserves:0 "Mobilisierung der Reserven"
-fpw_rights_of_man:0 "Rechte des Menschen"
+fpw_rights_of_man:0 "Menschenrechte"
 fpw_the_afghan_constitution:0 "Afganische Verfassung"
 fpw_pax_afghanistan:0 "Pax Afganistan"
-fpw_AFG_welfare_programs:0 "Wohlfahrtsprogramme"
+fpw_AFG_welfare_programs:0 "Sozialprogramme"
 fpw_AFG_lowered_taxes:0 "Gesenkte Steuern"
 fpw_AFG_farmers_supported:0 "Bauern unterstützt"
 fpw_AFG_raised_taxes:0 "Erhöhte Steuern"
@@ -150,7 +150,7 @@ fpw_AFG_tribal_recruitment_campaign:0 "Stämmerekrutierungskampagne"
 fpw_AFG_barazaki_dynasty:0 "Barazaki Dynasty"
 fpw_AFG_supressing_tribes:0 "Stämme unterdrücken"
 fpw_AFG_unified_country:0 "Afganistan endlich vereint"
-fpw_AFG_unified_country_desc:0 "Seit dem Fall des Durrani-Reiches ist Afghanistan geteilt geblieben. Bis jetzt, wo wir endlich die Kontrolle zentralisiert und Afghanistan unter Sher Ali Khan vereint haben."
+fpw_AFG_unified_country_desc:0 "Seit dem Fall des Durrani-Reiches ist Afganistan geteilt geblieben. Bis jetzt, wo wir endlich die Kontrolle zentralisiert und Afganistan unter Sher Ali Khan vereint haben."
 fpw_AFG_comprimise_with_tribes:0 "Kompromiss mit den Stämmen"
 fpw_AFG_illiterate_state_two:0 "Ungebildeter Staat"
 fpw_AFG_illiterate_state_three:0 "Ungebildeter Staat"
@@ -176,28 +176,6 @@ fpw_AFG_expanded_factory_rights:0 "Erweiterte Fabrikrechte"
 fpw_AFG_pro_womens_rights:0 "Frauenrechte"
 fpw_AFG_pakistani_resistance:0 "Pakistanischer Widerstand"
 fpw_AFG_holding_the_line:0 "Die Linie halten"
-fpw_AFZ_AFG_drawn_out_civil_war:0 "Ein ausgedehnter Bürgerkrieg"
-fpw_AFZ_AFG_drawn_out_civil_war_desc:0 "Der Bürgerkrieg in Afghanistan dauert viel zu lange an. Wir müssen uns vorerst auf die Verteidigung konzentrieren und uns dann auf die Offensive vorbereiten, um Afghanistan wieder zu vereinen. Leider sinkt die Stabilität rapide, während die Stämme immer weniger Vertrauen in unsere Fähigkeiten haben, den Bürgerkrieg fortzusetzen und zu gewinnen."
-fpw_AFZ_AFG_lack_of_national_identity:0 "Fehlende nationale Identität"
-fpw_AFZ_AFG_lack_of_national_identity_desc:0 "Nach dem Fall des Durrani-Reiches haben wir keine Flagge beansprucht. Ohne eine Flagge fehlt uns die nationale Einheit, es ist wichtig, dass wir sofort nach dem Bürgerkrieg eine Flagge erstellen."
-fpw_AFZ_tribal_economy:0 "Stamm Wirtschaft"
-fpw_AFZ_tribal_economy_desc:0 "Die Stämme halten fast die gesamte Macht in unserer Regierung, und ein Großteil unserer Wirtschaft basiert auf den Stämmen."
-fpw_AFG_AFZ_illiterate_state:0 "Ungebildeter Staat"
-fpw_AFG_AFZ_illiterate_state_desc:0 "Beide Afganistan haben schon viel zu lange mit Analphabetismus zu kämpfen. Wir müssen den Analphabetismus ausrotten, bevor er so tief in unserer Gesellschaft verankert ist, dass es zu spät ist, ihn zu beheben."
-fpw_AFZ_AFG_Afghan_Civil_War:0 "Afganischer Bürgerkrieg"
-fpw_AFZ_AFG_Afghan_Civil_War_desc:0 "Der Afghanische Bürgerkrieg dauert viel zu lange an. Wir müssen uns schnell vereinen, bevor ein Land eingreift. Zum Glück wissen wir, wie man in dieser Region kämpft."
-
-fpw_AFG_our_chance_is_now:0 "Unsere Chance ist jetzt"
-fpw_AFG_our_chance_is_now_desc:0 "Auch wenn die Rebellion sich nach Kabul ausgebreitet hat, waren wir geduldig damit, die Rebellion zu zerstören. Wir haben alle Angriffe geplant, es ist Zeit, unsere Offensive zu beginnen."
-fpw_AFG_entirely_war_economy:0 "Afganische Kriegswirtschaft"
-fpw_AFG_entirely_war_economy_desc:0 "Wir sind seit 3 Jahren im Krieg und haben auf eine stärker kriegsorientierte Wirtschaft umgestellt. Wir werden uns nach dem Bürgerkrieg mit den Folgen dieser Entscheidung auseinandersetzen müssen."
-fpw_AFG_post_war_economy:0 "Nachkriegswirtschaft"
-fpw_AFG_post_war_economy_desc:0 "Nachdem der Bürgerkrieg vorbei ist, müssen wir zu einer stärker zivilen Wirtschaft übergehen."
-fpw_AFG_supporting_afghanistan:0 "Helf Afganistan"
-fpw_AFG_supporting_afghanistan_desc:0 "Wir haben beschlossen, einige Hilfe nach Afghanistan zu schicken, leider hat dies Kosten zur Folge."
-fpw_AFG_extended_use_of_propoganda:0 "Erweiterter Einsatz von Propaganda"
-fpw_AFG_cheaper_guns:0 "Günstigere Gewehre"
-fpw_AFG_cheaper_guns_desc:0 "Günstigere Gewehre zur Massenproduktion sind jetzt eine Notwendigkeit"
 
 #### Custom Tooltips
 fpw_afg_investments:0 "§G Dieser Schwerpunkt wird Investitionsentscheidungen freischalten§!"
