--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -818,7 +818,7 @@
  STATE_804:0 "Herzegovina"
  STATE_805:0 "Northern Epirus"
  STATE_806:0 "Pyrénées-Atlantiques"
- STATE_807:0 "Gdingen"
+ STATE_807: "Westpreußen"
  STATE_808:1 "Rīga"
  STATE_809:1 "Zemgale"
  STATE_810:1 "Latgale"
