--- a/localisation/english/1870_ottoman_l_english.yml
+++ b/localisation/english/1870_ottoman_l_english.yml
@@ -1,8 +1,6 @@
 ﻿l_english:
  fpw_TUR_agrarian_economy:0 "Agrarian Economy"
  fpw_TUR_agrarian_economy_desc:0 "Our economy is mostly focused on our farmers which is heavily holding our economic capabilities back."
- ottoman_fpw.1.t:0 "Cretan Revolt"
- ottoman_fpw.1.d:0 "There has been mass protests and revolts in Crete. We must handle this situation carefully before they declare independence."
  fpw_TUR_tanzimat_economic_era:0 "Tanzimat Era"
  fpw_TUR_tanzimat_economic_era_desc:0 "The Tanzimat Era was a era of economic reforms in the ottoman empire. We can utilize these reforms to fix our agrarian economy while increasing our industrial capabilities in the world stage. Using these systems we can hopefully become one of most industrial states. We have had previous hardships with economic reforms, but we need to fix our economy out of necassity if we want to keep our claim to being a major power."
  TUR_tanzimat_era:0 "Tanzimat Era"
@@ -15,3 +13,8 @@
  TUR_deport_greeks_desc:0 "The greek in our empire have long been a problem for us. It is time to rid ourselves from them as they have been stirring up trouble in crete and only seems to be a burden to us. We will need to use some mass deportations and purges in order to root out the greeks from our state."
  TUR_reform_civillian_projects:0 "Reform Civilian Projects"
  TUR_reform_civillian_projects_desc:0 "Our civilian industry has severly been lacking for a long time. It is time to start focusing on building it up as we need to catch up with the rest of the world. While other states have vast industries ours is rather limited considering the sheer size of our empire."
+ # events
+ ottoman_fpw.1.t:0 "Cretan Revolt"
+ ottoman_fpw.1.d:0 "There has been mass protests and revolts in Crete. We must handle this situation carefully before they declare independence."
+ ottoman_fpw.2.t:0 "Arkadi Monastery explosion"
+ ottoman_fpw.2.d:0 "During the mass revolts that were happening in Crete the revolters planned and executed a terrorist attack on the Arkadi Monastery blowing it up. This has been great propoganda and a symbol of resistance for the Greek people living in Crete."
