Turkiye Eco Tree

--- a/localisation/english/1870_ottoman_l_english.yml
+++ b/localisation/english/1870_ottoman_l_english.yml
@@ -1,18 +1,44 @@
 ﻿l_english:
+ ### ideas
  fpw_TUR_agrarian_economy:0 "Agrarian Economy"
  fpw_TUR_agrarian_economy_desc:0 "Our economy is mostly focused on our farmers which is heavily holding our economic capabilities back."
  fpw_TUR_tanzimat_economic_era:0 "Tanzimat Era"
  fpw_TUR_tanzimat_economic_era_desc:0 "The Tanzimat Era was a era of economic reforms in the ottoman empire. We can utilize these reforms to fix our agrarian economy while increasing our industrial capabilities in the world stage. Using these systems we can hopefully become one of most industrial states. We have had previous hardships with economic reforms, but we need to fix our economy out of necassity if we want to keep our claim to being a major power."
+ fpw_TUR_inefficient_tax_farming:0 "Inefficient Tax Collection"
+ fpw_TUR_inefficient_tax_farming_desc:0 ""
+
+
+ ### focus 
  TUR_tanzimat_era:0 "Tanzimat Era"
  TUR_tanzimat_era_desc:0 "The Tanzimat Era was an era of economic reform for the sublime ottoman state. Where Abulaziz tried to modernize the economics of the state in order to keep up with the rest of the world."
  TUR_ready_for_disaster:0 "Ready For Disaster"
  TUR_ready_for_disaster_desc:0 "Our country is always at risk as the russians would seek to expand into us and the imperalists would like to carve up our empire into tiny pieces. We have to be ready for any foreign intervention in our country."
+ TUR_continue_turkish_dominance:0 "Continue Turkish Dominance"
+ TUR_continue_turkish_dominance_desc:0 ""
  TUR_our_response:0 "Our Response"
  TUR_our_response_desc:0 "There has been greek uprisings in crete, we must use the resources availible in order to handle this revolt swiftly."
- TUR_deport_greeks:0 "Deport Greeks"
- TUR_deport_greeks_desc:0 "The greek in our empire have long been a problem for us. It is time to rid ourselves from them as they have been stirring up trouble in crete and only seems to be a burden to us. We will need to use some mass deportations and purges in order to root out the greeks from our state."
  TUR_reform_civillian_projects:0 "Reform Civilian Projects"
  TUR_reform_civillian_projects_desc:0 "Our civilian industry has severly been lacking for a long time. It is time to start focusing on building it up as we need to catch up with the rest of the world. While other states have vast industries ours is rather limited considering the sheer size of our empire."
+ TUR_enforce_lenient_penal_code:0 "Enforce Lenient Penal Code"
+ TUR_enforce_lenient_penal_code_desc:0 ""
+ TUR_regulate_foreigners:0 "Regulate Foreigners"
+ TUR_regulate_foreigners_desc:0 ""
+ TUR_reform_court_systems:0 "Reform Court Systems"
+ TUR_reform_court_systems_desc:0 ""
+ TUR_establish_naval_minstry:0 "Establish Naval Minstry"
+ TUR_establish_naval_minstry_desc:0 ""
+ TUR_establish_the_gendarmerie:0 "Establish The Gendarmerie"
+ TUR_establish_the_gendarmerie_desc:0 ""
+ TUR_enact_nationality_law:0 "Enact Nationality Law"
+ TUR_enact_nationality_law_desc:0 ""
+ TUR_continue_the_reforms:0 "Continue The Reforms"
+ TUR_continue_the_reforms_desc:0 ""
+ TUR_no_restraints_on_the_sultan:0 "No Restraints For The Sultan"
+ TUR_no_restraints_on_the_sultan_desc:0 ""
+ TUR_take_a_tour_of_europe:0 "Take A Tour Of Europe"
+ TUR_take_a_tour_of_europe_desc:0 ""
+ TUR_restore_our_legitimacy:0 "Restore Our Legitimacy"
+ TUR_restore_our_legitimacy_desc:0 ""
  # events
  ottoman_fpw.1.t:0 "Cretan Revolt"
  ottoman_fpw.1.d:0 "There has been mass protests and revolts in Crete. We must handle this situation carefully before they declare independence."
